# luadch

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  compile  compile_with_mingw.bat  docker-compose.yml  luac.out
.github/: release-body.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker.yml  release.yml  smoke.yml
adclib/: adclib.cpp  base32.cpp  base32.h  includes.h  tiger.cpp
core/: adc.lua  audit.lua  backup.lua  backup_archive.lua  blocklist.lua  cacert_bootstrap.lua  cfg.lua  cfg_defaults.lua  cfg_lang.lua  cfg_secret.lua  cfg_users.lua  const.lua  doc.lua  ensuredirs.lua  geoip_update.lua  hbri.lua  hci.lua  hmac.lua  http.lua  http_client.lua  http_events.lua  http_filter.lua  http_router.lua  hub.lua  hub_bot_object.lua  hub_dispatch.lua  hub_user_object.lua  init.lua  iostream.lua  ipmatch.lua  mem.lua  mmdb.lua  out.lua  ratelimit.lua  restore.lua  scripts.lua  secrets.lua  server.lua  sha256.lua  signal.lua  (+5 more)
docker/: Dockerfile  entrypoint.sh
docs/: BACKUP.md  BLOCKLIST.md  BUILDING.md  CACERT.md  CONFIGURATION.md  DEVELOPMENT.md  DOCKER.md  HTTP_API.md  INSTALLING.md  LICENSE  Luadch_Default_Levels.txt  Luadch_Default_Nickname.txt  Luadch_Lua_API.txt  PLUGIN_API.md  README  SCRIPTS.md  SECURITY.md  WEBHOOKS.md
docs/phases/: PHASE_3.md  PHASE_5.md  PHASE_6.md  PHASE_7_FINDINGS.md  PHASE_8B_DUAL_STACK.md  PHASE_8_IO.md
examples/certs/: make_cert.bat  make_cert.sh  show_certinfo.bat
examples/cfg/: cfg.tbl  user.tbl  webhooks.tbl
examples/data/: etc_clientblocker.tbl.example
examples/etc/other_available_scripts/: bot_echobot.lua  cmd_code.lua  cmd_error.lua  cmd_nick.lua  cmd_regme.lua  cmd_showdoc.lua  cmd_sid.lua  debug_show_user_inf.lua  etc_char_replacer.lua  etc_example.lua  etc_sslinfo.lua  hub_keeping_alive.lua  usr_hub_slot_ratio.lua
examples/etc/other_available_scripts/lang/: cmd_code.lang.de  cmd_code.lang.en  cmd_nick.lang.de  cmd_nick.lang.en  cmd_regme.lang.de  cmd_regme.lang.en  usr_hub_slot_ratio.lang.en
examples/lang/: de.tbl  en.tbl
hub/: hub.c
lang/: de.tbl  en.tbl
lua/src/: CMakeLists.txt  Makefile
luasec/: luasec.vcxproj
luasocket/: CMakeLists.txt
luasocket/src/: select.c
res/: res.rc
scripts/: bot_opchat.lua  bot_pm2ops.lua  bot_regchat.lua  bot_session_chat.lua  cmd_accinfo.lua  cmd_ascii.lua  cmd_ban.lua  cmd_delreg.lua  cmd_disconnect.lua  cmd_errors.lua  cmd_gag.lua  cmd_help.lua  cmd_hubinfo.lua  cmd_hubstats.lua  cmd_mass.lua  cmd_myinf.lua  cmd_myip.lua  cmd_nickchange.lua  cmd_redirect.lua  cmd_reg.lua  cmd_reload.lua  cmd_restart.lua  cmd_rules.lua  cmd_setpass.lua  cmd_shutdown.lua  cmd_slots.lua  cmd_sslinfo.lua  cmd_talk.lua  cmd_topic.lua  cmd_upgrade.lua  cmd_uptime.lua  cmd_usercleaner.lua  cmd_userinfo.lua  cmd_userlist.lua  cmd_usersearch.lua  etc_aliases.lua  etc_auditlog.lua  etc_backup.lua  etc_banner.lua  etc_blacklist.lua  (+35 more)
scripts/data/: bot_session_chat.tbl  cmd_ban_history.tbl  cmd_delreg_blacklist.tbl  cmd_hubstats.tbl  cmd_hubstats_share_day.tbl  cmd_hubstats_share_month.tbl  cmd_hubstats_share_week.tbl  cmd_hubstats_users_day.tbl  cmd_hubstats_users_month.tbl  cmd_hubstats_users_week.tbl  cmd_reg_descriptions.tbl  cmd_topic.tbl  etc_clientblocker.tbl  etc_records.tbl  etc_trafficmanager.tbl  usr_uptime.tbl
scripts/lang/: bot_opchat.lang.de  bot_opchat.lang.en  bot_pm2ops.lang.de  bot_pm2ops.lang.en  bot_regchat.lang.de  bot_regchat.lang.en  bot_session_chat.lang.de  bot_session_chat.lang.en  cmd_accinfo.lang.de  cmd_accinfo.lang.en  cmd_ascii.lang.de  cmd_ascii.lang.en  cmd_ban.lang.de  cmd_ban.lang.en  cmd_delreg.lang.de  cmd_delreg.lang.en  cmd_disconnect.lang.de  cmd_disconnect.lang.en  cmd_errors.lang.de  cmd_errors.lang.en  cmd_gag.lang.de  cmd_gag.lang.en  cmd_help.lang.de  cmd_help.lang.en  cmd_hubinfo.lang.de  cmd_hubinfo.lang.en  cmd_hubstats.lang.de  cmd_hubstats.lang.en  cmd_mass.lang.de  cmd_mass.lang.en  cmd_myinf.lang.de  cmd_myinf.lang.en  cmd_myip.lang.de  cmd_myip.lang.en  cmd_nickchange.lang.de  cmd_nickchange.lang.en  cmd_redirect.lang.de  cmd_redirect.lang.en  cmd_reg.lang.de  cmd_reg.lang.en  (+84 more)
slnunicode/: unicode.lua
tests/: README.md  check_default_cfg_scripts.py
tests/smoke/: run.py  tiger.py
tests/unit/: adclib_hashpas_test.lua  adclib_unescape_test.lua  audit_test.lua  backup_archive_crypto_test.lua  backup_archive_test.lua  backup_test.lua  blocklist_test.lua  bot_session_chat_prefix_test.lua  cacert_bootstrap_test.lua  cfg_defaults_test.lua  cfg_secret_test.lua  cmd_disconnect_tl_test.lua  cmd_gag_bot_test.lua  cmd_usercleaner_orphan_test.lua  cmd_userinfo_align_test.lua  ensuredirs_test.lua  etc_aliases_test.lua  etc_backup_schedule_test.lua  etc_blocklist_feeds_test.lua  etc_blocklist_test.lua  etc_clientblocker_test.lua  etc_cmdlog_test.lua  etc_geoip_test.lua  etc_hubcommands_test.lua  etc_proxydetect_test.lua  etc_records_test.lua  etc_status_push_test.lua  etc_webhook_test.lua  etc_whitelist_test.lua  geoip_update_test.lua  hbri_test.lua  hmac_test.lua  http_client_test.lua  http_router_test.lua  hub_runtime_migration_test.lua  iostream_test.lua  ipmatch_test.lua  lang_test.lua  mmdb_test.lua  nick_prefix_resolution_test.lua  (+12 more)
tests/unit/fixtures/mmdb/: README.md
zlib_stream/: zlib_stream.c
